# gemm_hls

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
cmake/: CMakePushCheckState.cmake  CheckFortranFunctionExists.cmake  CheckFunctionExists.cmake  FindBLAS.cmake
cpp/: Prototype.cpp  Timer.h
host/: RunHardware.cpp  RunMatrixMatrix.cpp
hw/: top.v.in
include/: Compute.h  Config.h.in  MatrixMatrix.h  MatrixMultiplication.h  Memory.h  Utility.h
kernel/: Compute.cpp  MatrixMatrix.cpp  MatrixMatrixSimple.cpp  Memory.cpp  Top.cpp
scripts/: O_opt_design_pre.tcl  Synthesis.tcl.in  build_manager.py  config.tcl.in  create_ips.tcl  create_project.tcl  import_sources.tcl  merge_status.py  optMap.xml  optimal_memory_tile_size.py  package_kernel.tcl  vivado.py
src/: PrintSpecifications.cpp  Stats.cpp
test/: TestMatrixMatrix.cpp  TestSimulation.cpp
